# iost-notice-viewer

./: database.py  docker-compose.yml  iost-notice-scraper.py  main.py  pyproject.toml  routers.py
backend/: Dockerfile  docker-compose.yml  main.py  pyproject.toml
backend/notices/models/: notice.py
backend/scraper/: iost-notice-scraper.py
frontend/: docker-compose.yml  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/notices/: page.tsx
frontend/lib/api/: notices.ts
notices/models/: notice.py
notices/routers/: notices_routes.py
notices/schemas/: notice.py
notices/services/: notice_service.py
