[project]
name = "notice-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "beautifulsoup4>=4.14.3",
    "dotenv>=0.9.9",
    "fastapi>=0.133.1",
    "psycopg2-binary>=2.9.11",
    "requests>=2.32.5",
    "sqlmodel>=0.0.37",
    "uvicorn>=0.41.0",
]
